--- a/user/css/custom.css
+++ b/user/css/custom.css
@@ -1,5 +1,7 @@
 body {
   -webkit-print-color-adjust: exact !important;
+  /* zoom: 80%; */
+  font-size: 14px;
 }
 
 .theme_mailChimp2 form {
@@ -53,10 +55,10 @@ footer.home_three_footer .copyright_area .footer_border {
   top: -3px;
 }
 .theme_btn {
-  padding: 20px 28px;
+  padding: 15px;
 }
 .theme_line_btn {
-  padding: 20px 28px;
+  padding: 15px;
 }
 
 .dark-theme .header_area .header_topbar_area {
@@ -356,5 +358,42 @@ marquee ul li:before {
 .h4_faq-content .accordion-faq .card .card-header {
   background: #22336a;
     color: #fff;
-    font-size: 18px;
+    font-size: 16px;
+}
+
+canvas {
+  width: 100% !important;
+}
+ /* Full screen overlay */
+#imageOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.85); /* dark transparent background */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1050; /* above everything */
+}
+#imageOverlay img {
+  max-width: 100%;
+  max-height: 98%;
+  border-radius: 10px;
+}
+#closeBtn {
+  position: absolute;
+  top: 10px;
+  right: 30px;
+}
+/* Disable scroll */
+body.no-scroll {
+  overflow: hidden;
+}
+.contact_section .content {
+      display: none;
+}
+.contact_section .content.active {
+      display: block;
 }
