--- a/user/css/style.css
+++ b/user/css/style.css
@@ -3287,9 +3287,9 @@ label {
   top: 0;
   width: 100%;
   height: 100%;
-  background: #000;
+  /* background: #000;
   z-index: -1;
-  opacity: 0.75;
+  opacity: 0.75; */
 }
 
 @media (max-width: 767.98px) {
@@ -19309,4 +19309,22 @@ html[dir="rtl"] a.arrow_btns i {
     object-fit: cover;
     background-position: center center;
   }
+}
+.statement_area {
+  color: #fff !important;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url(../img/about-bg.jpg);
+}
+.statement_area .description {
+  padding: 30px 0px;
+}
+.statement_area .section-header h2 {
+  color: #fff;
+  padding-bottom: 10px;
+}
+.statement_area p {
+  color: #fff;
 }
